--- a/src/stageplaatsenadmin/OverzichtForm.form
+++ b/src/stageplaatsenadmin/OverzichtForm.form
@@ -504,68 +504,79 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jTextFieldContactpersoon" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jTextFieldBedrijfsnaam" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jTextFieldEmail" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jScrollPane6" alignment="0" pref="1206" max="32767" attributes="0"/>
-                          <Component id="jScrollPane7" alignment="0" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
+                              <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jLabelGUIBedrijf" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabelGUIContactpersoon" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabelGUIEmail" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabelGUIActiviteiten" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabelGUIAanwervend" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Component id="jLabelGUIStraat" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="474" max="-2" attributes="0"/>
-                                      <Component id="jLabelGUINummer" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Component id="jTextFieldStraat" min="-2" pref="493" max="-2" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="jTextFieldNummer" min="-2" pref="394" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Component id="jLabelGUIAdres" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Group type="102" alignment="0" attributes="0">
+                                  <Component id="jTextFieldContactpersoon" alignment="1" max="32767" attributes="0"/>
+                                  <Component id="jTextFieldBedrijfsnaam" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jTextFieldEmail" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jScrollPane6" alignment="0" pref="1206" max="32767" attributes="0"/>
+                                  <Component id="jScrollPane7" alignment="0" max="32767" attributes="0"/>
+                                  <Group type="102" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="jLabelGUIBedrijf" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jLabelGUIContactpersoon" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jLabelGUIEmail" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jLabelGUIActiviteiten" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jLabelGUIAanwervend" alignment="0" min="-2" max="-2" attributes="0"/>
                                           <Group type="102" alignment="0" attributes="0">
-                                              <Component id="jTextFieldPostcode" min="-2" pref="144" max="-2" attributes="0"/>
+                                              <Component id="jLabelGUIStraat" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace min="-2" pref="474" max="-2" attributes="0"/>
+                                              <Component id="jLabelGUINummer" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <Component id="jTextFieldStraat" min="-2" pref="493" max="-2" attributes="0"/>
                                               <EmptySpace max="-2" attributes="0"/>
-                                              <Component id="jTextFieldStad" min="-2" pref="482" max="-2" attributes="0"/>
+                                              <Component id="jTextFieldNummer" min="-2" pref="394" max="-2" attributes="0"/>
                                           </Group>
+                                          <Component id="jLabelGUIAdres" alignment="0" min="-2" max="-2" attributes="0"/>
                                           <Group type="102" alignment="0" attributes="0">
-                                              <Component id="jLabelGUIPostcode" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
-                                              <Component id="jLabelGUIStad" min="-2" max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Group type="102" alignment="0" attributes="0">
+                                                      <Component id="jTextFieldPostcode" min="-2" pref="144" max="-2" attributes="0"/>
+                                                      <EmptySpace max="-2" attributes="0"/>
+                                                      <Component id="jTextFieldStad" min="-2" pref="482" max="-2" attributes="0"/>
+                                                  </Group>
+                                                  <Group type="102" alignment="0" attributes="0">
+                                                      <Component id="jLabelGUIPostcode" min="-2" max="-2" attributes="0"/>
+                                                      <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
+                                                      <Component id="jLabelGUIStad" min="-2" max="-2" attributes="0"/>
+                                                  </Group>
+                                              </Group>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="jLabelGUILand" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="jTextFieldLand" min="-2" pref="531" max="-2" attributes="0"/>
+                                              </Group>
                                           </Group>
                                       </Group>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="jLabelGUILand" min="-2" max="-2" attributes="0"/>
-                                          <Component id="jTextFieldLand" min="-2" pref="531" max="-2" attributes="0"/>
-                                      </Group>
+                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                              <Component id="jComboBoxGekendeBedrijven" min="-2" pref="708" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jButtonBedrijfSelecteren" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Component id="jButtonBeheerBedrijven" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="372" max="-2" attributes="0"/>
-                      <Component id="jButtonBedrijfOpzoeken" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
-                      <Component id="jButtonBedrijfOpzoeken" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jComboBoxGekendeBedrijven" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jButtonBedrijfSelecteren" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jButtonBeheerBedrijven" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jLabelGUIBedrijf" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
@@ -612,7 +623,7 @@
                           </Group>
                           <Component id="jTextFieldPostcode" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="90" max="32767" attributes="0"/>
+                      <EmptySpace pref="88" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -719,12 +730,35 @@
                 <Property name="text" type="java.lang.String" value="Adres:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JButton" name="jButtonBedrijfOpzoeken">
+            <Component class="javax.swing.JButton" name="jButtonBedrijfSelecteren">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Opzoeken"/>
+                <Property name="text" type="java.lang.String" value="Selecteren"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonBedrijfOpzoekenActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonBedrijfSelecterenActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="jComboBoxGekendeBedrijven">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="4">
+                    <StringItem index="0" value="Item 1"/>
+                    <StringItem index="1" value="Item 2"/>
+                    <StringItem index="2" value="Item 3"/>
+                    <StringItem index="3" value="Item 4"/>
+                  </StringArray>
+                </Property>
+              </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value=""/>
+              </AuxValues>
+            </Component>
+            <Component class="javax.swing.JButton" name="jButtonBeheerBedrijven">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Beheer Bedrijven"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonBeheerBedrijvenActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
